@@ -15,18 +15,16 @@ create-name-hint: Can be any name as long as it is unique.
 invalid-environment: The environment specified does not exist!
 valid-environments: Valid types are: {0}.
 
-loadcommand-name: load
-loadcommand-description: Load a world mananged by DimensionDoor..
-loadcommand-permission-description: Allow users to load existing worlds..
-loadcommand-usage: <name>
-
-load-world-hint: Use /dd list for a list of managed worlds.
-world-is-already-loaded: {0} is already loaded.
-may-not-load-world-twice: You may not load a world twice.
-world-is-not-managed: {0} is not managed by DimensionDoor.
-load-existing-world: To import an existing world use /dd create.
-unable-to-load-world: Unable to load {0}!
-world-loaded: &YELLOW{0} &GREENhas been loaded.
+loadcommand.name: load
+loadcommand.description: Load a world mananged by DimensionDoor
+loadcommand.permission-description: Allow users to load existing worlds
+loadcommand.usage: <name>
+loadcommand.world-is-not-managed: {0} is not managed by DimensionDoor.
+loadcommand.world-is-already-loaded: {0} is already loaded.
+loadcommand.unable-to-load-world: Unable to load {0}!
+loadcommand.load-existing-world: To import an existing world use /dd create.
+loadcommand.world-loaded: &YELLOW{0} &GREENhas been loaded.
+loadcommand.may-not-load-world-twice: You may not load a world twice.
 
 removecommand-name: remove
 removecommand-description: Unload and remove a world from DimensionDoor.
@@ -57,12 +55,11 @@ teleportcommand-usage: <name>
 
 world-not-loaded: {0} is not loaded!
 
-spawncommand-name: spawn
-spawncommand-description: Set the spawn point of the world.
-spawncommand-permission-description: Allow users to set the spawn points of worlds.
-spawncommand-usage: <name>
-
-spawn-set: &GREENA new spawn has been set in &YELLOW{0}&GREEN.
+spawncommand.name: spawn
+spawncommand.description: Set the spawn point of the world.
+spawncommand.permission-description: Allow users to set the spawn points of worlds.
+spawncommand.usage: <name>
+spawncommand.spawn-set: &GREENSpawn in &YELLOW{0} &GREENset to your location.
 
 listcommand-name: list
 listcommand-description: List all the available worlds.
@@ -90,4 +87,5 @@ infocommand-name: info
 infocommand-description: Get information about a world..
 infocommand-permission-description: Allow users to get information about worlds.
 infocommand-usage: <name>
+
 
